# OpenENV_Ecommerence_User_Interaction_Agent_Environment

./: .gitignore  Dockerfile  README.md  blog.md  build_dataset.py  client.py  detail_project_description  inference.py  inference2.py  inference3.py  inference_err.txt  inference_output.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py  upload_to_space.py  validate_output.txt
docs/: HACKATHON_JUDGING_GUIDE.md  HOW_IT_WORKS.md  RL.md
my_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
my_env/openenv_my_env.egg-info/: PKG-INFO  requires.txt
my_env/server/: __init__.py  app.py  environment.py  grader.py  tasks.py
server/: app.py  environment.py  grader.py  my_env_environment.py  requirements.txt  tasks.py
